# IRKos

./: .gitignore  CMakeLists.txt  Doxyfile  common.mk  jumptable.yaml  symbols_PROS-3.4.0.txt
include/sdk/: irk_external.h  irk_private.h  v5_api.h  v5_apitypes.h  v5_apiuser.h  v5_color.h
linker/: gcc_arm32_ram.ld  irk_boot.ld
scripts/cmake/: arm-none-eabi-toolchain.cmake
scripts/python/: gen_jumptable.py
src/: irk_boot.c  irk_jumptable.c  irk_vectors.S
src/sdk/: irk_private.c  v5_api.c
